--- a/public/Dashboard/Dev.css
+++ b/public/Dashboard/Dev.css
@@ -179,3 +179,20 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+pre {
+  padding: 1em;
+  margin: 0;
+  background-color: #1E1E1E;
+  color: #F9D702;
+  font-size: 16px;
+  max-width: 50vw;
+  max-height: 80vh;
+  overflow: auto;
+}
+
+.string { color: #CE9178; }
+.number { color: #B5CEA8; }
+.boolean { color: #4C86B6; }
+.null { color: #4C86B6; }
+.key { color: #9CDCFE; }
