--- a/public/team.css
+++ b/public/team.css
@@ -152,7 +152,6 @@ header {
   z-index: 999;
   width: 100%;
   padding: 1em 0em;
-  /* box-shadow: #00000041 0em .5em 20px; */
   transition: background-color 200ms ease-in;
 }
 
@@ -175,7 +174,7 @@ header li::before {
 .phone {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 
@@ -187,6 +186,7 @@ header li::before {
   align-items: center;
   justify-content: center;
   border-radius: .5em;
+  text-decoration: none;
 }
 
 .phone a svg {
@@ -208,7 +208,8 @@ header li::before {
 
 .nav-toggle-label {
   position: absolute;
-  top: 0;
+  top: 50%;
+  transform: translateY(-50%);
   right: 0;
   margin-right: 1em;
   height: 50%;
@@ -247,7 +248,6 @@ nav {
   top: 100%;
   right: 0;
   background: var(--color-blue);
-  box-shadow: #00000041 0em .5em 20px;
   width: 100%;
   transform: scale(1, 0);
   transform-origin: top;
@@ -308,7 +308,7 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
+    grid-template-columns: .2fr auto 3fr auto .2fr;
   }
   
   .logo {
@@ -319,7 +319,6 @@ nav a:hover {
   .phone {
     grid-column: 4 / 5;
     justify-content: flex-end;
-    margin-left: 1em;
   }
   
   nav {
@@ -343,6 +342,7 @@ nav a:hover {
   
   nav ul {
     display: flex;
+    align-items: center;
   }
   
   nav li {
