--- a/public/pricing-old.css
+++ b/public/pricing-old.css
@@ -217,7 +217,7 @@ header li::before {
 .phone {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 
@@ -251,7 +251,8 @@ header li::before {
 
 .nav-toggle-label {
   position: absolute;
-  top: 0;
+  top: 50%;
+  transform: translateY(-50%);
   right: 0;
   margin-right: 1em;
   height: 50%;
@@ -290,7 +291,6 @@ nav {
   top: 100%;
   right: 0;
   background: var(--color-blue);
-  box-shadow: #00000041 0em .5em 20px;
   width: 100%;
   transform: scale(1, 0);
   transform-origin: top;
@@ -351,18 +351,16 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto 3fr auto .2fr;
+    grid-template-columns: auto 1fr auto;
   }
   
   .logo {
-    grid-column: 2 / 3;
-    margin-left: 0;
+    grid-column: 1 / 2;
   }
 
   .phone {
-    grid-column: 4 / 5;
+    grid-column: 3 / 4;
     justify-content: flex-end;
-    margin-left: 1em;
   }
   
   nav {
@@ -386,6 +384,7 @@ nav a:hover {
   
   nav ul {
     display: flex;
+    align-items: center;
   }
   
   nav li {
@@ -415,6 +414,7 @@ nav a:hover {
     transform: scale(1,1);
   }
 }
+
 
 /* banner and modal section */
 
