new tutor site map

--- a/public/styles/student-overview.css
+++ b/public/styles/student-overview.css
@@ -118,6 +118,10 @@ main header h2 {
   color: var(--red);
 }
 
+.links > * {
+  display: none;
+}
+
 main .content {
   padding: 2em;
   width: 100%;
