--- a/public/styles/Tutor.css
+++ b/public/styles/Tutor.css
@@ -1,148 +1,80 @@
+:root {
+  --nav-background: white;
+  --nav-color: black;
+
+  --color-primary: #ffffff;
+  --color-secondary: #E6E7E8;
+  --color-tertiary: #101b42;
+
+  --yellow-deep: #ffb102;
+  --green-deep: #27c13a;
+  --blue-deep: #19a7c8;
+  --purple-deep: #6b6be5;
+  --red-deep: #ef6b6b;
+
+  --yellow-light: #ffca02;
+  --green-light: #3cdd58;
+  --blue-light: #02c6ff;
+  --purple-light: #8787ff;
+  --red-light: #ea5a5a;
+
+  --yellow-very-light: #FFF4CC;
+  --green-very-light: #CCFFD5;
+  --blue-very-light: #CCF4FF;
+  --purple-very-light: #CCCCFF;
+  --red-very-light: #FFCCCC;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: "proxima-nova", sans-serif;
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-weight: 200;
   margin: 0;
 }
 
-/* height of time slot */
-.fc .fc-timegrid-slot {
-  height: 2em !important;
+h1 {
+  font-size: 2rem;
 }
 
-#mainCalendarContent {
-  height: 80vh;
-  margin-top: 3em;
+h2 {
+  font-size: 1.5rem;
 }
 
-.input-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: stretch;
-  /* padding-left: 8%;
-  padding-right: 8%; */
-}
-
-.input-block {
-  /* flex-grow: 1; */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin: 10px;
-}
-
-.input {
-  /* width: 100%; */
-  max-width: 300px;
-  height: 2em;
-  font-size: 16px;
-  font-weight: 200;
-  padding-left: 10px;
-  padding-right: 10px;
+button {
+  padding: 0.5em 1em;
   border: none;
-  background-color: rgb(200, 200, 200, .25);
-  border-radius: 10px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-}
-
-.label {
-  /* align-self: flex-start; */
-  text-align: left;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  color: black;
-}
-
-select {
-  /* width: 90%; */
-  max-width: 300px;
-  height: 2em;
-  font-size: 14px;
+  background-color: var(--green-deep);
+  color: white;
+  border-radius: 0.5em;
+  font-size: 1rem;
   font-weight: 500;
-  margin: 0;
-  padding-left: 10px;
-  padding-right: 50px;
-  border: none;
-  background: url("../Images/select-dropdown.png") no-repeat 95%;
-  color: #110D65;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  -webkit-appearance: none;
+  height: fit-content;
+  cursor: pointer;
+}
+
+section {
+  padding: 2em;
 }
 
 .header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  color: #110D65;
-}
-
-.feedback_input {
-  height: 100px;
-  width: 500px;
-  resize: none;
-  display: block;
-  font-size: 16px;
-}
-
-.button {
-  margin-top: 20px;
-  margin-right: 50px;
-  width: 140px;
-  height: 45px;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
-  color: #110D65;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-  }
-
-  .button:hover {
-    background-color: #110D65;
-    box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-
-  p {
-    margin: 0;
-    padding: 0;
-  }
-  
-.add-user-section {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgb(0, 0, 0, 0.5);
-  z-index: 100;
+  flex-wrap: wrap-reverse;
 }
 
-#navigationModal {
-  padding: 25px;
-  background-color: white;
-  border-radius: 10px;
-  position: relative;
+.header > * {
+  margin: 0;
 }
 
-#navigationModal .close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
-  cursor: pointer;
+.header > button {
+  margin-left: auto;
+}
+
+.buttons > button {
+  margin-bottom: 0.5em;
 }
