--- a/public/styles/test-taker.css
+++ b/public/styles/test-taker.css
@@ -146,6 +146,10 @@ details > summary {
   align-items: center;
 }
 
+.display-none {
+  display: none;
+}
+
 /* fix position of mathjax */
 #bimg {
   position: relative;
@@ -182,13 +186,21 @@ section.hide {
 }
 
 .header {
-  background-color: var(--secondary-background);
-  color: white;
+  color: var(--accent-color);
   display: flex; 
-  flex-direction: row; 
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 0.5em 1em;
+}
+
+#main .header {
+  background-color: var(--accent-color);
+  color: white;
+}
+
+#main .header .logo {
+  fill: white;
 }
 
 .header > .container {
@@ -210,8 +222,10 @@ section.hide {
 }
 
 .header .logo {
-  height: 2rem;
-  fill: white;
+  display: block;
+  width: 5em;
+  fill: var(--accent-color);
+  cursor: pointer;
 }
 
 /* tutorial */
@@ -357,7 +371,7 @@ section.hide {
 }
 
 .landing .content {
-  padding: 4em;
+  padding: 0em 4em 4em;
   display: grid;
   height: 100%;
   grid-template-columns: 1fr 1fr;
@@ -369,26 +383,26 @@ section.hide {
 
 @media screen and (max-width: 1000px) {
   .landing .content {
-    padding: 2em;
+    padding: 0em 2em 4em;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
 }
 
-.landing .content .helpers {
-  height: 0;
+.feedback {
   color: var(--default-color);
-}
-
-.landing .content .helpers .feedback {
   margin: 0;
   cursor: pointer;
   position: absolute;
-  top: 1em;
-  left: 1em;
+  right: 1em;
+  bottom: 1em;
+  background-color: white;
+  padding: .25em .5em;
+  border-radius: .25em;
+  border: 2px solid var(--default-color);
 }
 
-.landing .content .helpers .tutorial-bubble {
+.tutorial-bubble {
   border: 2px solid var(--default-color);
   width: 28px;
   height: 28px;
@@ -398,6 +412,10 @@ section.hide {
   position: absolute;
   top: 1em;
   right: 1em;
+}
+
+.landing .content .welcome {
+  grid-column: 1 / -1;
 }
 
 .landing .content .welcome > h1 {
@@ -476,7 +494,7 @@ section.hide {
   margin-right: .5em;
 }
 
-.landing .content .full-assignment-wrapper,
+/* .landing .content .full-assignment-wrapper,
 .landing .content .current-assignment-wrapper,
 .landing .content .previous-assignment-wrapper {
   display: none;
@@ -493,7 +511,7 @@ section.hide {
 
 .landing .content .previous-assignment-wrapper:has(.assignment) {
   display: block;
-}
+} */
 
 #previousAssignments details summary::-webkit-details-marker,
 #previousAssignments details summary::marker {
@@ -1126,12 +1144,12 @@ section.hide {
 }
 
 .main .footer {
-  background-color: var(--secondary-background);
+  background-color: var(--accent-color);
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 
 .main .footer .nav {
@@ -1157,7 +1175,7 @@ section.hide {
 }
 
 .main .footer .circle {
-  border: 4px solid white;
+  border: 3px solid white;
   border-radius: 50%;
   width: min-content;
   height: min-content;
